# bazel_python_override_example

./: MODULE.bazel  README.md
app/: BUILD.bazel  main.py
